[package]
name = "arcus"
version = "0.1.0"
authors = ["Justin Krueger <justin@kroo.gs>"]
license = "MIT"
repository = "https://github.com/kroogs/arcus"
description = "Decorates stdin with gradients made of 24-bit ANSI color codes."
keywords = ["stdin", "stdout", "color", "gradient", "ansi", "interpolate", "24-bit", "24bit"]

[dependencies]
ansi_term = "0.11"
clap = "2.32"
hex = "0.3.2"
unicode-segmentation = "1.2.1"
